# CEnhanced

./: .gitignore  CHANCE.md  CMakeLists.txt  H26.md  H27.md  Makefile  README.md  build.bat  build.sh  draftH28.md  install.bat  install.ps1  install.sh  main.S  sampletests.asm  test  test.S  test.c  test.ccb  test2.S  test2.ccb
docs/: README.md  architecture.md  howto-add-keyword.md  howto-operator-modulo.md  howto-operator-shift.md  howto-stmt-switch.md
runtime/: init.ce  managed.ce  memory.ce  new_delete.ce  panic.ce  runtime.cclib  runtime.ceproj
src/: ast.c  ast.h  cclib.c  cclib.h  ccsim.c  ccsim.h  chance_version.h  codegen_ccb.c  codegen_coff_x64.c  crt_stub_coff_x64.c  driver_cli.c  driver_cli.h  driver_link.c  driver_link.h  driver_options.c  driver_options.h  driver_overrides.c  driver_overrides.h  driver_paths.c  driver_paths.h  driver_project.c  driver_project.h  driver_runtime.c  driver_runtime.h  driver_toolchain.c  driver_toolchain.h  driver_types.h  driver_validate.c  driver_validate.h  driver_verbose.c  driver_verbose.h  frontend.c  frontend.h  frontend_c.c  frontend_ce.c  frontend_cinder.c  frontend_impl.h  includes.c  includes.h  lexer.c  (+10 more)
src/stdlib/: environment.ce  exception.ce  file.ce  io.ce  memory.ce  net.ce  profiling.ce  stdlib.cclib  stdlib.ceproj  string.ce  stringext.ce
src/stdlib/generics/: collection.ce
tests/: CMakeLists.txt  cvm.ccb  cvm.ce  cvm.x86.S  runtime.ce  tmp_cvm_struct.cclib  tmp_cvm_struct.ce  tmp_forward.ce  tmp_io.S  tmp_io.ce  tmp_io_split.ccb  tmp_io_split.ce  tmp_io_split_alias_fail.ce  tmp_ioprint.ccb  tmp_managed_retlen_direct.ccb  tmp_managed_retlen_direct.ce  tmp_managed_split_len.ce  tmp_managed_split_length.ccb  tmp_managed_split_length.ce  tmp_min.ce  tmp_split_ext.ccb  tmp_split_ext.ce  tmp_vprintf.ce
tests/all/00/: 00.S  00.ce  expect.ccb
tests/all/01/: 01.ce  a
tests/examples/: address_of.ce  boxing_unboxing.ce  bundle_invalid_destructor.ce  call_printf.S  call_printf.ccb  call_printf.ce  call_printf_linux.S  global_struct.ce  global_vars.ce  libtest.cclib  libtest.ce  libtest_2.ce  libtest_2_out.asm  libtest_2_out.ccb  libtest_LibTest_0.S  libtest_LibTest_0_linux.S  libtest_LibTest_Another_1.S  libtest_LibTest_Another_1_linux.S  logical_not.ce  managed_empty_array_literal.ce  managed_split_extension_length.ce  managed_string_switch_match.ce  miniccb.S  miniccb.ccb  miniccb.ce  preproc_diagnostics.ce  preproc_error.ce  preproc_static_assert_fail.ce  pullShape.ce  ret0.ce  ret42.ce  ret_sum.ce  sample.ccb  samples.ceproj  shift_left.ce  shift_right.ce  split_alias_import_fail.ce  stdlib.cclib  stdlib_Std_Memory_1.S  stdlib_Std_String_0.S  (+10 more)
tests/examples/arm/: arm  arm.S  arm.ccb  arm.ce
tests/examples/bf/: bf.ceproj  main.ce
tests/examples/bslash/: bs.ce
tests/examples/fake_asm/C/: fake_asm  fake_asm.c
tests/examples/fake_asm/CHance/: fake_asm  fake_asm.ce
tests/examples/hard_lexer/C/: hard_lexer  hard_lexer.c
tests/examples/hard_lexer/CHance/: hard_lexer  hard_lexer.ce
tests/examples/html/: http_server.ce  index.html  script.js  server  styles.css
tests/examples/lexer/C/: c_simple_lexer.s  simple_lexer  simple_lexer.c
tests/examples/lexer/CHance/: simple_lexer  simple_lexer.ce
tests/examples/rps/: main.ce  rps.ceproj
tests/examples/strings/C/: string_bytes  string_bytes.c
tests/examples/strings/CHance/: string_bytes  string_bytes.ce
